Add grid structure for display screen

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Calculator</title>
   </head>
   <body>
     <div class="calculator-container">
-      <textarea name="" id="" class="display-screen"></textarea>
+      <div class="display-screen"></div>
       <div class="clear-delete">
         <button class="clear">CLEAR</button>
         <button class="delete">DELETE</button>
