Center numbers and functions in calculator buttons

--- a/index.html
+++ b/index.html
@@ -15,22 +15,54 @@
         <button class="delete">DELETE</button>
       </div>
       <div class="number-functions">
-        <div class="number" id="one">1</div>
-        <div class="number" id="two">2</div>
-        <div class="number" id="three">3</div>
-        <div class="number" id="four">4</div>
-        <div class="number" id="five">5</div>
-        <div class="number" id="six">6</div>
-        <div class="number" id="seven">7</div>
-        <div class="number" id="eight">8</div>
-        <div class="number" id="nine">9</div>
-        <div class="number" id="ten">10</div>
-        <div class="functions" id="division">/</div>
-        <div class="functions" id="multiplications">*</div>
-        <div class="functions" id="subtraction">-</div>
-        <div class="functions" id="addition">+</div>
-        <div class="functions" id="equal-sign">=</div>
-        <div class="functions" id="point">.</div>
+        <div class="number">
+          <div id="one">1</div>
+        </div>
+        <div class="number">
+          <div id="two">2</div>
+        </div>
+        <div class="number">
+          <div id="three">3</div>
+        </div>
+        <div class="number">
+          <div id="four">4</div>
+        </div>
+        <div class="number">
+          <div id="five">5</div>
+        </div>
+        <div class="number">
+          <div id="six">6</div>
+        </div>
+        <div class="number">
+          <div id="seven">7</div>
+        </div>
+        <div class="number">
+          <div id="eight">8</div>
+        </div>
+        <div class="number">
+          <div id="nine">9</div>
+        </div>
+        <div class="number">
+          <div id="ten">10</div>
+        </div>
+        <div class="functions">
+          <div id="division">/</div>
+        </div>
+        <div class="functions">
+          <div id="multiplications">*</div>
+        </div>
+        <div class="functions">
+          <div id="subtraction">-</div>
+        </div>
+        <div class="functions">
+          <div id="addition">+</div>
+        </div>
+        <div class="functions">
+          <div id="equal-sign">=</div>
+        </div>
+        <div class="functions">
+          <div id="point">.</div>
+        </div>
       </div>
     </div>
   </body>
