Position buttons in proper order

--- a/index.html
+++ b/index.html
@@ -16,51 +16,51 @@
       </div>
       <div class="number-functions">
         <div class="number">
-          <div id="one">1</div>
+          <div id="one" id="one-container">1</div>
         </div>
-        <div class="number">
+        <div class="number" id="two-container">
           <div id="two">2</div>
         </div>
-        <div class="number">
+        <div class="number" id="three-container">
           <div id="three">3</div>
         </div>
-        <div class="number">
+        <div class="number" id="four-container">
           <div id="four">4</div>
         </div>
-        <div class="number">
+        <div class="number" id="five-container">
           <div id="five">5</div>
         </div>
-        <div class="number">
+        <div class="number" id="six-container">
           <div id="six">6</div>
         </div>
-        <div class="number">
+        <div class="number" id="seven-container">
           <div id="seven">7</div>
         </div>
-        <div class="number">
+        <div class="number" id="eight-container">
           <div id="eight">8</div>
         </div>
-        <div class="number">
+        <div class="number" id="nine-container">
           <div id="nine">9</div>
         </div>
-        <div class="number">
-          <div id="ten">10</div>
+        <div class="number" id="zero-container">
+          <div id="zero">0</div>
         </div>
-        <div class="functions">
+        <div class="functions" id="division-container">
           <div id="division">/</div>
         </div>
-        <div class="functions">
+        <div class="functions" id="multiplications-container">
           <div id="multiplications">*</div>
         </div>
-        <div class="functions">
+        <div class="functions" id="subtraction-container">
           <div id="subtraction">-</div>
         </div>
-        <div class="functions">
+        <div class="functions" id="addition-container">
           <div id="addition">+</div>
         </div>
-        <div class="functions">
+        <div class="functions" id="equal-sign-container">
           <div id="equal-sign">=</div>
         </div>
-        <div class="functions">
+        <div class="functions" id="point-container">
           <div id="point">.</div>
         </div>
       </div>
