--- a/index.html
+++ b/index.html
@@ -65,5 +65,8 @@
         </div>
       </div>
     </div>
+    <div class="center">
+      <p class="sign">Created by &copy; Bayanda Dlamini</p>
+    </div>
   </body>
 </html>
