Add basic functions
Added basic functions for addition, multiplication, subtraction and
division. For now result is console logged. Will return values in
future.

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
           <div id="zero">0</div>
         </div>
         <div class="functions" id="division-container">
-          <div id="division">/</div>
+          <div id="division">÷</div>
         </div>
         <div class="functions" id="multiplications-container">
-          <div id="multiplications">*</div>
+          <div id="multiplications">×</div>
         </div>
         <div class="functions" id="subtraction-container">
           <div id="subtraction">-</div>
@@ -68,5 +68,7 @@
     <div class="center">
       <p class="sign">Created by &copy; Bayanda Dlamini</p>
     </div>
+
+    <script src="/script.js"></script>
   </body>
 </html>
