Refactor code for add and mulitiplication function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div class="calculator-container">
-      <div class="display-screen"></div>
+      <div class="display-screen">
+        <p class="display-child"></p>
+      </div>
       <div class="clear-delete">
         <button class="clear">CLEAR</button>
         <button class="delete">DELETE</button>
