Add eventlistener to all buttons

--- a/index.html
+++ b/index.html
@@ -17,52 +17,52 @@
         <button class="delete">DELETE</button>
       </div>
       <div class="number-functions">
-        <div class="number">
+        <div class="number all-btn">
           <div id="one" id="one-container">1</div>
         </div>
-        <div class="number" id="two-container">
+        <div class="number all-btn" id="two-container">
           <div id="two">2</div>
         </div>
-        <div class="number" id="three-container">
+        <div class="number all-btn" id="three-container">
           <div id="three">3</div>
         </div>
-        <div class="number" id="four-container">
+        <div class="number all-btn" id="four-container">
           <div id="four">4</div>
         </div>
-        <div class="number" id="five-container">
+        <div class="number all-btn" id="five-container">
           <div id="five">5</div>
         </div>
-        <div class="number" id="six-container">
+        <div class="number all-btn" id="six-container">
           <div id="six">6</div>
         </div>
-        <div class="number" id="seven-container">
+        <div class="number all-btn" id="seven-container">
           <div id="seven">7</div>
         </div>
-        <div class="number" id="eight-container">
+        <div class="number all-btn" id="eight-container">
           <div id="eight">8</div>
         </div>
-        <div class="number" id="nine-container">
+        <div class="number all-btn" id="nine-container">
           <div id="nine">9</div>
         </div>
-        <div class="number" id="zero-container">
+        <div class="number all-btn" id="zero-container">
           <div id="zero">0</div>
         </div>
-        <div class="functions" id="division-container">
+        <div class="functions all-btn" id="division-container">
           <div id="division">÷</div>
         </div>
-        <div class="functions" id="multiplications-container">
+        <div class="functions all-btn" id="multiplications-container">
           <div id="multiplications">×</div>
         </div>
-        <div class="functions" id="subtraction-container">
+        <div class="functions all-btn" id="subtraction-container">
           <div id="subtraction">-</div>
         </div>
-        <div class="functions" id="addition-container">
+        <div class="functions all-btn" id="addition-container">
           <div id="addition">+</div>
         </div>
-        <div class="functions" id="equal-sign-container">
+        <div class="functions all-btn" id="equal-sign-container">
           <div id="equal-sign">=</div>
         </div>
-        <div class="functions" id="point-container">
+        <div class="functions all-btn" id="point-container">
           <div id="point">.</div>
         </div>
       </div>
